--- a/wellindex.html
+++ b/wellindex.html
@@ -77,7 +77,7 @@
     <header class="hero-bg h-screen flex items-center justify-center text-center text-white px-4">
         <div data-aos="fade-up" data-aos-duration="1000">
             <p class="text-lg md:text-xl mb-4 font-light tracking-widest">아름다운 삶의 마무리를 위한 준비</p>
-            <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">웰다잉 라이프케어 프로젝트<br><span class="text-2xl md:text-4xl font-light block mt-2">Well-Dying LifeCare Project</span></h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-6 leading-tight">이영훈 스타트업 웰다잉 라이프케어 프로젝트<br><span class="text-2xl md:text-4xl font-light block mt-2">Well-Dying LifeCare Project</span></h1>
             <p class="text-base md:text-lg max-w-2xl mx-auto mb-10 text-gray-200">
                 지역사회 기반의 자율적·예방적 웰다잉 지원 체계를 구축하여<br>
                 당신의 존엄하고 평안한 삶의 마무리를 돕습니다.
@@ -423,4 +423,5 @@
         });
     </script>
 </body>
+
 </html>
